--add-opens to fix reflection in unittesting embers-services